export type Favorite = {
  id: number;
  user_id: number;
  favorite_user_id: number;
  created_at?: string;
  updated_at?: string;
};